# DD

./: .env.example  .gitignore  README.md  pyproject.toml
data/: public_comps.json  unicorn_founders.parquet  unicorn_founders_list.json  unicorn_founders_seed.json
data/elad_excerpts/: coinvestor_lens.md  founder_pattern_matching.md  high_growth_handbook_principles.md  market_inflection.md  saas_traction_benchmarks.md
data/queue/: 291f57737d6d.json  6780c1b947fc.json
examples/sample_deal/: clipper_report_sample.md  linear_report.html  linear_report.md  memo.md  revoy_memo.md  revoy_report.html  revoy_report.md  sample_clipper.md  sellara_memo.md
scripts/: build_elad_corpus.py  build_unicorn_corpus.py  openclaw_pipeline_test.py  parallel_submit_test.py  refresh_notice_cookie.py  smoke_test.py  v8_sanity_render.py
src/dd_agent/: __init__.py  citations.py  context.py  delivery.py  orchestrator.py  retrieval.py  server.py  state.py
src/dd_agent/data_sources/: edgar.py  exits.py  github.py  (+7 more)
tests/: conftest.py  test_bessemer.py  test_charts.py  test_citations.py  test_classifier_integration.py  test_clipper.py  test_delivery.py  test_documents.py  test_founder_photo.py  test_funding_rounds.py  test_identity.py  test_ingestion.py  test_llm.py  test_notice_co.py  test_pdf_rendering.py  test_photo_classifier.py  test_photo_profile.py  test_quality.py  test_quality_backtest.py  test_renderer.py  test_report_template.py  test_retrieval.py  test_revenue_metrics.py  test_reverse_dcf.py  test_search.py  test_stage_detection.py  test_state.py  test_synthesis_prompt.py
(+26 files in other folders)
