[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dd-agent"
version = "0.1.0"
description = "Elad-Gil-style due diligence agent for private investment deals. MCP server."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "semenka" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "yfinance>=0.2.40",
    "sec-edgar-downloader>=5.0.2",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "tavily-python>=0.3.3",
    "Pillow>=10.2.0",
    "weasyprint>=61.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
photo = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
]
podcasts = [
    "yt-dlp>=2024.5.0",
    "openai-whisper>=20231117",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.4.0",
]

[project.scripts]
dd-agent = "dd_agent.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dd_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
